--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jquery": "^3.3.33",
+    "bootstrap": "^4.4.1",
     "browser-sync": "^2.24.6",
     "browser-sync-webpack-plugin": "^2.2.2",
     "css-loader": "^1.0.0",
@@ -22,6 +23,7 @@
     "file-loader": "^1.1.11",
     "http-server": "^0.12.1",
     "node-sass": "^4.9.3",
+    "popper.js": "^1.16.1",
     "sass-loader": "^7.1.0",
     "script-loader": "^0.7.2",
     "source-map": "^0.7.3",
