--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "css-loader": "^1.0.0",
     "extract-loader": "^2.0.1",
     "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.12.1",
+    "image-webpack-loader": "^6.0.0",
     "node-sass": "^4.9.3",
     "popper.js": "^1.16.1",
     "postcss-loader": "^3.0.0",
