--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webpack-ts-template",
   "version": "1.0.0",
   "description": "A starter template for webdevelopment",
-  "main": "index.js",
+  "main": "main.bundle.js",
   "scripts": {
     "webpack:dev": "node_modules\\.bin\\webpack --mode=development",
     "webpack:prod": "node_modules\\.bin\\webpack --mode=production",
@@ -23,7 +23,6 @@
     "css-loader": "^1.0.0",
     "extract-loader": "^2.0.1",
     "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.12.1",
     "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
@@ -38,7 +37,8 @@
     "typescript": "^3.0.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "webpack-merge": "^4.2.2"
   },
   "repository": {
     "type": "git",
