ported in code from older project

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^4.4.1",
     "browser-sync": "^2.24.6",
     "browser-sync-webpack-plugin": "^2.2.2",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^1.0.0",
     "extract-loader": "^2.0.1",
     "file-loader": "^1.1.11",
@@ -30,11 +31,13 @@
     "node-sass": "^4.9.3",
     "popper.js": "^1.16.1",
     "postcss-loader": "^3.0.0",
+    "reflect-metadata": "^0.1.13",
     "sass-loader": "^7.1.0",
     "script-loader": "^0.7.2",
     "source-map": "^0.7.3",
     "style-loader": "^0.22.1",
     "ts-loader": "^4.4.2",
+    "typedjson-npm": "^0.1.7",
     "typescript": "^3.0.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
