intro layout and linked GSMM

--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "css-loader": "^1.0.0",
     "extract-loader": "^2.0.1",
     "file-loader": "^1.1.11",
+    "geometric": "^2.2.3",
     "html-webpack-plugin": "^2.30.1",
     "http-server": "^0.12.1",
     "image-webpack-loader": "^6.0.0",
+    "jquery-ui-bundle": "^1.12.1-migrate",
+    "mdbootstrap": "^4.19.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.9.3",
     "popper.js": "^1.16.1",
