--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "homepage": "https://github.com/hidmantra/webpack-ts-template#readme",
   "dependencies": {
+    "@popperjs/core": "^2.4.4",
     "@types/lodash": "^4.14.149",
     "jquery": "^3.5.1",
     "lodash": "^4.17.15"
